# HomeTasks

./: .gitignore
Plumber/: compile.sh  refactored.cpp  run.sh
task1/: after_refactoring.cpp  build_run.sh
task2/: counting_sort.cpp  counting_sort.hpp  queries_segments.cpp  response_io.cpp  response_io.hpp
task3/: menu_functions.cpp  menu_functions.hpp  menu_items.cpp  menu_items.hpp
task4_cmake/: .ninja_deps  .ninja_log  build.sh
task4_cmake/build-ninja/: .ninja_deps  .ninja_log
task4_cmake/projects/: CMakeLists.txt
task4_cmake/projects/LongNumbers/: CMakeLists.txt
task4_cmake/projects/LongNumbers/src/: CMakeLists.txt  long_number.cpp  long_number.hpp
task4_cmake/projects/LongNumbers/test/: test_long_number.cpp
task4_cmake/projects/LongNumbers/tests/: CMakeLists.txt  test2.cpp
task4_cmake/projects/bubble_sort/: CMakeLists.txt
task4_cmake/projects/bubble_sort/src/: CMakeLists.txt  main.cpp
task4_cmake/projects/bubble_sort/src/cpp/: io.cpp  sortings.cpp
task4_cmake/projects/bubble_sort/src/hpp/: io.hpp  sortings.hpp
task4_cmake/projects/bubble_sort/tests/: CMakeLists.txt  test1.cpp
task4_cmake/projects/doubly_linked_list/src/: doubly_linked_list.cpp  doubly_linked_list.hpp
task4_cmake/projects/doubly_linked_list/test/: test_doubly_linked_list.cpp
task4_cmake/projects/merge_sort/: CMakeLists.txt  merge.cpp
task4_cmake/projects/merge_sort/src/: merge.cpp
task4_cmake/projects/obuchaika/: CMakeLists.txt  main.cpp  menu.hpp  menu_items.cpp  menu_items.hpp
task4_cmake/projects/tests/: CMakeLists.txt  test1.cpp
task4_cmake/projects/tests/src/: test1.cpp
task4_cmake/projects/vector/src/: vector.cpp  vector.hpp
task4_cmake/projects/vector/test/: test_vector.cpp
